// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`iOS BpkChip should render correctly 1`] = `
<View
  accessibilityLabel="Accessibility label"
  accessibilityRole="button"
  accessibilityStates={Array []}
  accessible={true}
  clickable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Array [
      Array [
        Object {
          "alignItems": "center",
          "backgroundColor": "rgb(255, 255, 255)",
          "borderRadius": 40,
          "flexDirection": "row",
          "justifyContent": "space-between",
          "paddingHorizontal": 16,
          "paddingVertical": 8,
          "shadowColor": "rgb(17, 18, 54)",
          "shadowOffset": Object {
            "height": 0.5,
            "width": 0,
          },
          "shadowOpacity": 0.15,
          "shadowRadius": 1.5,
        },
      ],
      null,
    ]
  }
>
  <Text
    style={
      Array [
        Object {
          "color": "rgb(17, 18, 54)",
          "fontFamily": "System",
          "fontSize": 14,
          "fontWeight": "400",
          "letterSpacing": 0.154,
        },
        Object {},
        Array [
          Object {
            "color": "rgb(68, 69, 96)",
            "includeFontPadding": false,
          },
        ],
      ]
    }
  >
    Label
  </Text>
  <View
    style={
      Array [
        Object {
          "backgroundColor": "rgb(17, 18, 54)",
          "bottom": 0,
          "flex": 1,
          "left": 0,
          "opacity": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        },
        Object {
          "borderRadius": 40,
        },
      ]
    }
  />
</View>
`;

exports[`iOS BpkChip should render correctly with "disabled" 1`] = `
<View
  accessibilityLabel="Accessibility label"
  accessibilityRole="button"
  accessibilityStates={Array []}
  accessible={true}
  clickable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Array [
      Array [
        Object {
          "alignItems": "center",
          "backgroundColor": "rgb(255, 255, 255)",
          "borderRadius": 40,
          "flexDirection": "row",
          "justifyContent": "space-between",
          "paddingHorizontal": 16,
          "paddingVertical": 8,
          "shadowColor": "rgb(17, 18, 54)",
          "shadowOffset": Object {
            "height": 0.5,
            "width": 0,
          },
          "shadowOpacity": 0.15,
          "shadowRadius": 1.5,
        },
        Object {
          "backgroundColor": "rgb(255, 255, 255)",
        },
      ],
      null,
    ]
  }
>
  <Text
    style={
      Array [
        Object {
          "color": "rgb(17, 18, 54)",
          "fontFamily": "System",
          "fontSize": 14,
          "fontWeight": "400",
          "letterSpacing": 0.154,
        },
        Object {},
        Array [
          Object {
            "color": "rgb(68, 69, 96)",
            "includeFontPadding": false,
          },
          Object {
            "color": "rgb(178, 178, 191)",
          },
        ],
      ]
    }
  >
    Label
  </Text>
  <View
    style={
      Array [
        Object {
          "backgroundColor": "rgb(17, 18, 54)",
          "bottom": 0,
          "flex": 1,
          "left": 0,
          "opacity": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        },
        Object {
          "borderRadius": 40,
        },
      ]
    }
  />
</View>
`;

exports[`iOS BpkChip should render correctly with "selected" 1`] = `
<View
  accessibilityLabel="Accessibility label"
  accessibilityRole="button"
  accessibilityStates={
    Array [
      "selected",
    ]
  }
  accessible={true}
  clickable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Array [
      Array [
        Object {
          "alignItems": "center",
          "backgroundColor": "rgb(255, 255, 255)",
          "borderRadius": 40,
          "flexDirection": "row",
          "justifyContent": "space-between",
          "paddingHorizontal": 16,
          "paddingVertical": 8,
          "shadowColor": "rgb(17, 18, 54)",
          "shadowOffset": Object {
            "height": 0.5,
            "width": 0,
          },
          "shadowOpacity": 0.15,
          "shadowRadius": 1.5,
        },
        Object {
          "backgroundColor": "rgb(0, 178, 214)",
        },
      ],
      null,
    ]
  }
>
  <Text
    style={
      Array [
        Object {
          "color": "rgb(17, 18, 54)",
          "fontFamily": "System",
          "fontSize": 14,
          "fontWeight": "400",
          "letterSpacing": 0.154,
        },
        Object {},
        Array [
          Object {
            "color": "rgb(68, 69, 96)",
            "includeFontPadding": false,
          },
          Object {
            "color": "rgb(255, 255, 255)",
          },
        ],
      ]
    }
  >
    Label
  </Text>
  <View
    style={
      Array [
        Object {
          "backgroundColor": "rgb(17, 18, 54)",
          "bottom": 0,
          "flex": 1,
          "left": 0,
          "opacity": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        },
        Object {
          "borderRadius": 40,
        },
      ]
    }
  />
</View>
`;

exports[`iOS BpkChip should render correctly with arbitrary props 1`] = `
<View
  accessibilityLabel="Accessibility label"
  accessibilityRole="button"
  accessibilityStates={Array []}
  accessible={true}
  clickable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Array [
      Array [
        Object {
          "alignItems": "center",
          "backgroundColor": "rgb(255, 255, 255)",
          "borderRadius": 40,
          "flexDirection": "row",
          "justifyContent": "space-between",
          "paddingHorizontal": 16,
          "paddingVertical": 8,
          "shadowColor": "rgb(17, 18, 54)",
          "shadowOffset": Object {
            "height": 0.5,
            "width": 0,
          },
          "shadowOpacity": 0.15,
          "shadowRadius": 1.5,
        },
      ],
      null,
    ]
  }
  testID="123"
>
  <Text
    style={
      Array [
        Object {
          "color": "rgb(17, 18, 54)",
          "fontFamily": "System",
          "fontSize": 14,
          "fontWeight": "400",
          "letterSpacing": 0.154,
        },
        Object {},
        Array [
          Object {
            "color": "rgb(68, 69, 96)",
            "includeFontPadding": false,
          },
        ],
      ]
    }
  >
    Label
  </Text>
  <View
    style={
      Array [
        Object {
          "backgroundColor": "rgb(17, 18, 54)",
          "bottom": 0,
          "flex": 1,
          "left": 0,
          "opacity": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        },
        Object {
          "borderRadius": 40,
        },
      ]
    }
  />
</View>
`;

exports[`iOS BpkChip should render correctly with custom style 1`] = `
<View
  accessibilityLabel="Accessibility label"
  accessibilityRole="button"
  accessibilityStates={Array []}
  accessible={true}
  clickable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Array [
      Array [
        Object {
          "alignItems": "center",
          "backgroundColor": "rgb(255, 255, 255)",
          "borderRadius": 40,
          "flexDirection": "row",
          "justifyContent": "space-between",
          "paddingHorizontal": 16,
          "paddingVertical": 8,
          "shadowColor": "rgb(17, 18, 54)",
          "shadowOffset": Object {
            "height": 0.5,
            "width": 0,
          },
          "shadowOpacity": 0.15,
          "shadowRadius": 1.5,
        },
      ],
      Object {
        "flex": 1,
      },
    ]
  }
>
  <Text
    style={
      Array [
        Object {
          "color": "rgb(17, 18, 54)",
          "fontFamily": "System",
          "fontSize": 14,
          "fontWeight": "400",
          "letterSpacing": 0.154,
        },
        Object {},
        Array [
          Object {
            "color": "rgb(68, 69, 96)",
            "includeFontPadding": false,
          },
        ],
      ]
    }
  >
    Label
  </Text>
  <View
    style={
      Array [
        Object {
          "backgroundColor": "rgb(17, 18, 54)",
          "bottom": 0,
          "flex": 1,
          "left": 0,
          "opacity": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        },
        Object {
          "borderRadius": 40,
        },
      ]
    }
  />
</View>
`;

exports[`iOS BpkChip should support theming when selected 1`] = `
<View
  accessibilityLabel="Accessibility label"
  accessibilityRole="button"
  accessibilityStates={
    Array [
      "selected",
    ]
  }
  accessible={true}
  clickable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Array [
      Array [
        Object {
          "alignItems": "center",
          "backgroundColor": "rgb(255, 255, 255)",
          "borderRadius": 40,
          "flexDirection": "row",
          "justifyContent": "space-between",
          "paddingHorizontal": 16,
          "paddingVertical": 8,
          "shadowColor": "rgb(17, 18, 54)",
          "shadowOffset": Object {
            "height": 0.5,
            "width": 0,
          },
          "shadowOpacity": 0.15,
          "shadowRadius": 1.5,
        },
        Object {
          "backgroundColor": "rgb(0, 178, 214)",
        },
        Object {
          "backgroundColor": "red",
        },
      ],
      null,
    ]
  }
>
  <Text
    style={
      Array [
        Object {
          "color": "rgb(17, 18, 54)",
          "fontFamily": "System",
          "fontSize": 14,
          "fontWeight": "400",
          "letterSpacing": 0.154,
        },
        Object {},
        Object {
          "fontFamily": "System",
        },
        Array [
          Object {
            "color": "rgb(68, 69, 96)",
            "includeFontPadding": false,
          },
          Object {
            "color": "rgb(255, 255, 255)",
          },
          Object {
            "color": "#4B5458",
          },
          Object {
            "color": "yellow",
          },
        ],
      ]
    }
  >
    Label
  </Text>
  <View
    style={
      Array [
        Object {
          "backgroundColor": "rgb(17, 18, 54)",
          "bottom": 0,
          "flex": 1,
          "left": 0,
          "opacity": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        },
        Object {
          "borderRadius": 40,
        },
      ]
    }
  />
</View>
`;
